module-3: Added screenshots; Added changes